# boundless-crm

./: .gitignore  LICENSE.rst  README.md  README.rst  pyproject.toml  restart
flaskr/: __init__.py  blog.py  db.py  schema.csv  schema.sql
flaskr/static/: script.js  style.css
flaskr/templates/: base.html
flaskr/templates/blog/: index.html  lead.html  leads.html
instance/: config.py
yuli/: __init__.py  auth.py  blog.py  db.py  schema.sql  schema2.csv
yuli/static/: style.css
yuli/templates/: base.html  skeleton.html
yuli/templates/auth/: login.html  register.html
yuli/templates/blog/: index.html  lead.html
