[project]
name = "yuli"
version = "0.0.1.1"
description = "The basic blog app built in the Flask tutorial."
readme = "README.md"
license = {text = "BSD-3-Clause"}
maintainers = [{name = "Michael Hoyt", email = "oloty@pm.me"}]
dependencies = [
    "flask",
    "pytest",
    "coverage",
    "flake8"
]

[project.urls]
Documentation = "https://github.org/hoytnix/boundless-crm"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "yuli"

[tool.flit.sdist]
include = [
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["yuli", "tests"]
